<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/SIGNIN_heroLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/SIGNIN_handle"
                android:layout_width="match_parent"
                android:layout_height="1dp"></RelativeLayout>

            <ImageView
                android:id="@+id/SIGNIN_heroImage"
                android:layout_below="@id/SIGNIN_handle"
                android:src="@drawable/durban2"
                android:scaleType="centerCrop"
                android:layout_width="match_parent"
                android:layout_height="240dp" />

            <TextView
                android:id="@+id/SIGNIN_cityName"
                android:text="eThekwini"
                android:textSize="32dp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="200dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_below="@id/SIGNIN_heroLayout"
            android:padding="@dimen/mon_wide"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/SIGNIN_welcomeLayout"
                android:padding="@dimen/mon_padding"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/SIGNIN_welcome"
                    android:text="@string/welcome"
                    android:textStyle="bold"
                    android:textSize="24dp"
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <ImageView
                    android:id="@+id/SIGNIN_language"
                    android:src="@drawable/language48"
                    android:visibility="gone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:text="@string/languages"
                    android:textSize="12dp"
                    android:visibility="gone"
                    android:layout_marginTop="@dimen/mon_divider"
                    android:layout_below="@id/SIGNIN_language"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </RelativeLayout>

            <EditText
                android:id="@+id/SIGNIN_editUserID"
                android:layout_below="@id/SIGNIN_welcomeLayout"
                android:layout_marginTop="16dp"
                android:inputType="textVisiblePassword"
                android:hint="@string/enter_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/SIGNIN_editPIN"
                android:layout_below="@id/SIGNIN_editUserID"
                android:hint="@string/enter_pswd"
                android:inputType="number"
                android:layout_marginTop="@dimen/mon_padding"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/SIGNIN_btn"
                android:text="@string/signin"
                android:layout_below="@id/SIGNIN_editPIN"
                style="@style/ButtonRed"
                android:layout_marginTop="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </RelativeLayout>

        <ProgressBar
            android:id="@+id/SIGNIN_progress"

            android:layout_alignParentRight="true"
            android:layout_margin="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </RelativeLayout>
</ScrollView>